@@ -296,6 +296,7 @@ void dm_stack_pop( player* pl );
 object* dm_stack_peek( player* pl );
 void dm_stack_push( player* pl, tag_t item );
 object* get_dm_object( player* pl, char** params, int* from );
+int command_stack_clear( object* op, char* params );
 int command_stack_pop( object* op, char* params );
 int command_stack_push( object* op, char* params );
 int command_stack_list( object* op, char* params );
