@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+include/sproto.h: Add function prototype.
+server/c_wiz.c: Add 'command_stack_clear' to clear DM item stack.
+server/commands.c: Link function to function array.
+Ryo 2004-09-26
+
 server/player.c: Allow to 'reply' to players that logged out but did not yet
    drop the connection. Now reply works like other communication commands.
 common/utils.c: Fix random_roll() and die_roll() to not return out of range
